static/styles/index.css
html {
  font-size: 16px;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  line-height: 1.5;
  color: #333;
  background-color: #fff;
}

body {
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

h3,
h4 {
  margin: 0;
}

.main-container {
  width: 100%;
  height: 100%;
  margin: 0 auto;
  padding: 0;
}

section {
  margin-bottom: 100px;
}

/* Welcome pane */
.welcome-pane {
  width: 100%;
  height: 700px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}
.welcome-pane-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}

.bg {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 0;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: -2;
}

.overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background-color: rgba(51, 51, 51, 0.5);
  z-index: -1;
}

.header {
  position: absolute;
  top: 20px;
  width: 100%;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  z-index: 10;
}

.header-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 1400px;
  padding: 0 50px;
  background: transparent;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.scrolled {
  position: fixed;
  background-color: #6e5eb7;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.brand-logo-pane {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  background-color: transparent;
}

.brand-name {
  font-size: 40px;
  font-weight: bold;
  color: #fff;
  margin: auto 0;
  margin-left: 20px;
}

/* Nav buttons */
.nav-button-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.nav-button {
  margin: 0 10px;
  color: white;
  font-size: medium;
  font-weight: bold;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
  height: 50px;
  width: auto;
  padding: 0 20px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.nav-button:hover {
  background-color: #385ed9;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

/* Header End - Add Listing, Cart, Profile */
.header-end {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.add-listing {
  height: 40px;
  padding: 0px 30px;
  border: 1px solid #f5f5f5;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  color: #f5f5f5;
  font-weight: bold;
  text-align: center;
  border-radius: 30px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.add-listing:hover {
  background-color: #f5f5f5;
  color: rgba(51, 51, 51, 0.736);
  border: 0px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.sub-header-end {
  position: relative;
  display: flex;
}

.cart,
.profile {
  margin: auto 0;
  margin-left: 20px;
  height: 60px;
  width: 60px;
  background-color: transparent;
  border: 0;
}

.cart:hover,
.profile:hover {
  background-color: #f5f5f54d;
  color: rgba(51, 51, 51, 0.736);
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.cart>img,
.profile>img {
  height: 80%;
  width: 90%;
}

#cart-items-quantity {
  position: absolute;
  top: -10px;
  right: 10%;
  font-size: 14px;
  font-weight: bold;
  color: #fff;
  background-color: #cb6336;
  border-radius: 50%;
  padding: 2px 5px;
  border: 0;
}

.profile {
  margin-left: 0;
}

/* Property details container for welcome pane */
.welcome-pane-container>.property-details-container {
  position: absolute;
  width: 100%;
  height: 120px;
  bottom: 40px;
  background: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
}

.welcome-pane-container .property-details {
  height: 100%;
  width: 85%;
  border: 0px;
  border-radius: 10px;
  background-color: #f5f5f5;
  /* margin: auto; */
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0 50px;
  align-items: center;
  justify-content: center;
}

.welcome-pane-container .property-details p {
  margin: auto 0;
}

#prop-name {
  font-size: x-large;
  font-weight: 700;
  color: #333;
}

.welcome-pane-container .property-address {
  font-size: small;
  color: rgb(116, 116, 116);
}

.welcome-pane-container .property-price {
  position: relative;
  margin-left: auto;
}

.welcome-pane-container .property-details div>p:first-child {
  font-size: small;
  color: rgb(116, 116, 116);
}

.welcome-pane-container .property-details .value {
  font-size: medium;
  color: #333;
  font-weight: 700;
}

.welcome-pane-container .property-details .property-price>.value {
  margin: 0;
  font-size: x-large;
  color: #385ed9;
}

.welcome-pane-container .property-specs {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: auto 0;
  margin-left: auto;
}
/* ... */

